@startuml

title __ATTACK's Class Diagram__\n

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.ConeFlame {
            + ConeFlame()
            + ConeFlame()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.ConeGold {
            + ConeGold()
            + ConeGold()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.GreedHand {
            + GreedHand()
            + GreedHand()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.HookBoxing {
            + HookBoxing()
            + HookBoxing()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.KickDown {
            + KickDown()
            + KickDown()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.SoilWaveSpells {
            + SoilWaveSpells()
            + SoilWaveSpells()
            + upgrade()
            + use()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.SoulSacrifice {
            + SoulSacrifice()
            + SoulSacrifice()
            + upgrade()
            + use()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.StarMeteor {
            + StarMeteor()
            + StarMeteor()
            + upgrade()
            + use()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.TheKissOfDeath {
            + TheKissOfDeath()
            + TheKissOfDeath()
            + upgrade()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.Whirlpool {
            + Whirlpool()
            + Whirlpool()
            + upgrade()
            + use()
            + use()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      namespace neutral.attack {
        class gamesource.battleState.card.neutral.attack.WindingByWoodSpirit {
            + WindingByWoodSpirit()
            + WindingByWoodSpirit()
            + upgrade()
            + use()
            + use()
        }
      }
    }
  }
  

  gamesource.battleState.card.neutral.attack.ConeFlame -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.ConeGold -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.GreedHand -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.HookBoxing -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.KickDown -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.SoilWaveSpells -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.SoulSacrifice -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.StarMeteor -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.TheKissOfDeath -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.Whirlpool -up-|> gamesource.battleState.card.AttackCard
  gamesource.battleState.card.neutral.attack.WindingByWoodSpirit -up-|> gamesource.battleState.card.AttackCard




@enduml
